# structured-haskell-mode

./: .gitignore  structured-haskell-mode.cabal
elisp/: shm-context-menu.el  shm-lambda.el  shm-queries.el  shm-query.el  shm-refactor.el  shm.el
src/: HSrcQuery.hs  Main.hs  haskell-src-query.hs
