name:                structured-haskell-mode
version:             1.0.2
synopsis:            Structured editing Emacs mode for Haskell
description:         Structured editing Emacs mode for Haskell.
homepage:            https://github.com/chrisdone/structured-haskell-mode
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           Chris Done 2013
category:            Development
build-type:          Simple
cabal-version:       >=1.8
data-files:          elisp/shm-ast-documentation.el
                     elisp/shm-customizations.el
                     elisp/shm.el
                     elisp/shm-evaporate.el

executable structured-haskell-mode
  main-is:           Main.hs
  ghc-options:       -O2 -Wall
  hs-source-dirs:    src
  build-depends:     hlint >= 1.8.57,
                     base >= 4 && < 5,
                     haskell-src-exts >= 1.14.0,
                     syb >= 0.4.1

executable haskell-src-query
  main-is:           HSrcQuery.hs
  ghc-options:       -O2 -Wall
  hs-source-dirs:    src
  build-depends:     process >= 1.1.0.2,
                     base >= 4 && < 5,
                     haskell-src-exts >= 1.14.0,
                     hint == 0.3.3.7,
                     syb >= 0.4.1

